# geks

./: .flake8  .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements_build.txt  requirements_dev.txt  requirements_test.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: actions.yaml  development.yaml  release.yaml
examples/: building_path.py  heights_and_rivers.py
geks/: __init__.py  edge.py  front_mpl.py  geometry.py  heightmap.py  hexagon.py  hexmap.py  layout.py  pathfinding.py  rivers.py  utils.py
geks/cython/: __init__.py  fill_sinks.pyx
geks/front/: __init__.py  front_mpl.py
test/: test_borders.py  test_geometry.py  test_heightmap.py  test_hex.py  test_hexmap.py  test_layout.py  test_pathfinding.py  test_rivers.py
