[build-system]
requires = [
    'setuptools',
    'Cython >= 3.0.2',
    # https://github.com/numpy/numpy/issues/23808#issuecomment-1678677094
    'numpy >= 1.23.5; python_version < "3.12.0rc1"',
    'numpy >= 1.26.0b1; python_version >= "3.12.0rc1"'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'geks'
version = '0.0.2'
requires-python = '>= 3.10'
dependencies = [
    'numpy >= 1.23.5'
]
description = 'Hexagonal mapmaking toolkit'
readme = 'README.md'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Cython',
    'License :: OSI Approved :: MIT License'
]
authors = [
    { name = 'Vasily Negrebetskiy', email = 'kmiziz.com@gmail.com'}
]

[project.urls]
source = 'https://github.com/kompoth/geks'

[project.optional-dependencies]
mpl = ['matplotlib >= 3.6.3']

[tool.setuptools]
packages = ['geks', 'geks.front', 'geks.cython']

[tool.black]
line-length = 79
